--- a/SuperMarket/.classpath
+++ b/SuperMarket/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_80"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/WebSphere Application Server traditional V8.5.5 JRE"/>
 	<classpathentry kind="lib" path="lib/POI/lib/commons-codec-1.9.jar"/>
 	<classpathentry kind="lib" path="lib/POI/lib/commons-logging-1.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/POI/lib/junit-4.12.jar"/>
@@ -13,5 +13,10 @@
 	<classpathentry kind="lib" path="lib/POI/poi-ooxml-3.13-20150929.jar"/>
 	<classpathentry kind="lib" path="lib/POI/poi-ooxml-schemas-3.13-20150929.jar"/>
 	<classpathentry kind="lib" path="lib/POI/poi-scratchpad-3.13-20150929.jar"/>
+	<classpathentry kind="src" path=".apt_generated">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
